2008-01-22  Neil Jerram  <neil@ossau.uklinux.net>

	* README: Should say version 1.8.3, not 1.8.2.

	* LICENSE: Change COPYING.LIB to COPYING.LESSER.

	* COPYING.LESSER: Renamed, previously COPYING.LIB.

	* COPYING: Removed.

	* libguile.h: Update copyright statement to LGPL.

2007-12-04  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention `accept' and `scm_c_{read,write}' bug fixes.

2007-12-03  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Add SRFI-69.

2007-10-17  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention reader bug-fix.

2007-10-16  Ludovic Courtès  <ludo@gnu.org>

	Guile 1.8.3 released.

	* GUILE-VERSION (GUILE_MICRO_VERSION): Incremented.
	(LIBGUILE_INTERFACE_REVISION): Incremented.

2007-10-10  Ludovic Courtès  <ludo@gnu.org>

	* configure.in (SCM_I_GSC_NEED_BRACES_ON_PTHREAD_ONCE_INIT):
	New substituted variable.
	Use `-Werror' when using GCC and checking for
	`PTHREAD_ONCE_INIT'.  Add check for braces around
	`PTHREAD_MUTEX_INITIALIZER'.
	* NEWS: Mention build fix for IRIX.

2007-10-02  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention `(ice-9 slib)' fix and threading fix.

2007-09-03  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention alignment-related bug fixes.

2007-09-03  Kevin Ryde  <user42@zip.com.au>

	* configure.in (AC_CHECK_FUNCS): Add clog and cexp.

2007-09-02  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention memory leak fix in `make-socket-address'.

2007-09-01  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention duplicate binding warnings to stderr.

2007-08-23  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention Solaris bug fixes.

2007-08-11  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention SRFI-35 and the new reader.

	* configure.in: Check for <strings.h> and `strncasecmp ()'.

2007-08-08  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention changes to `record-accessor' and
	`record-modifier'.

2007-08-03  Ludovic Courtès  <ludo@gnu.org>

	* configure.in: Use `build-aux' as `AC_CONFIG_AUX_DIR', and `m4'