@@ -55,6 +55,7 @@ For fixes or providing information which led to a fix:
 	  Marco Maggi
         Gregory Marton
             Dan McMahill
+          Roger Mc Murtrie
         Han-Wen Nienhuys
             Jan Nieuwenhuizen
          Hrvoje Nikšić
